prepping for first deploy
